[gd_scene format=3 uid="uid://dx11m6k388pmh"]

[ext_resource type="PackedScene" uid="uid://prh35jb6tjtd" path="res://Player/TEMP/sophia_skin.tscn" id="1_4flbx"]
[ext_resource type="Script" uid="uid://b1q8wp8u0bd4s" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="PackedScene" uid="uid://0r2j8vpjq5ci" path="res://Components/HealthComponent/health_component.tscn" id="4_gwnis"]
[ext_resource type="Script" uid="uid://c40ixgq7adnn0" path="res://Components/BuffsComponent/buff.gd" id="5_fhl08"]
[ext_resource type="PackedScene" uid="uid://b4o1lbs05btwq" path="res://Components/BuffsComponent/buffs_component.tscn" id="5_k53q1"]
[ext_resource type="PackedScene" uid="uid://bg7hp7of3be8h" path="res://Components/StatsComponent/stats_component.tscn" id="6_fhl08"]
[ext_resource type="PackedScene" uid="uid://gnv53i6moht0" path="res://Components/StateMachine/state_machine.tscn" id="7_od3ui"]
[ext_resource type="Script" uid="uid://cprstmdj8bci" path="res://Player/States/player_idle.gd" id="8_00tjw"]
[ext_resource type="Script" uid="uid://2p2yfi6mstw0" path="res://Player/States/player_move.gd" id="9_00tjw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]
radius = 0.2607422

[sub_resource type="SphereShape3D" id="SphereShape3D_4ntmi"]

[sub_resource type="Resource" id="Resource_fhl08"]
script = ExtResource("5_fhl08")
metadata/_custom_type_script = "uid://c40ixgq7adnn0"

[sub_resource type="Resource" id="Resource_k53q1"]
script = ExtResource("5_fhl08")
metadata/_custom_type_script = "uid://c40ixgq7adnn0"

[node name="Player" type="CharacterBody3D" unique_id=169490035 groups=["Player"]]
script = ExtResource("1_4ntmi")

[node name="SophiaSkin" parent="." unique_id=1322268260 instance=ExtResource("1_4flbx")]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1300248057]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_onrkg")

[node name="CameraPivot" type="Node3D" parent="." unique_id=1520950285]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.8236415, -0.56711084, 0, 0.56711084, 0.8236415, 0, 1.1327909, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot" unique_id=803433517]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)
shape = SubResource("SphereShape3D_4ntmi")
spring_length = 8.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D" unique_id=1506696307]
unique_name_in_owner = true

[node name="BuffsComponent" parent="." unique_id=1724703616 instance=ExtResource("5_k53q1")]
unique_name_in_owner = true
dict = Dictionary[String, ExtResource("5_fhl08")]({
"jump": SubResource("Resource_fhl08"),
"speed": SubResource("Resource_k53q1")
})

[node name="HealthComponent" parent="." unique_id=1999000023 instance=ExtResource("4_gwnis")]

[node name="StatsComponent" parent="." unique_id=1622807289 node_paths=PackedStringArray("health_component") instance=ExtResource("6_fhl08")]
health_component = NodePath("../HealthComponent")

[node name="StateMachine" parent="." unique_id=1777195957 node_paths=PackedStringArray("initial_state", "actor") instance=ExtResource("7_od3ui")]
initial_state = NodePath("Idle")
actor = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine" unique_id=1320958072]
script = ExtResource("8_00tjw")
metadata/_custom_type_script = "uid://cprstmdj8bci"

[node name="Move" type="Node" parent="StateMachine" unique_id=2144111328]
script = ExtResource("9_00tjw")
metadata/_custom_type_script = "uid://2p2yfi6mstw0"
